# og-loc

./: Cargo.toml  README.md  template.typ.j2
src/: augment.rs  bulk.rs  convert.rs  error.rs  lib.rs  main.rs  one_shot.rs  prepare.rs  serve.rs  spec.rs
src/snapshots/: og_loc__convert__tests__render_png_many_owners.snap  og_loc__convert__tests__render_typst_source.snap
tests/: main.rs
