[package]
name = "og-loc"
version = "0.1.0"
edition = "2021"
authors =  ["Henk Oordt <hd@oordt.dev>"]
description = "Open Graph image generator for crates.io"
readme = "README.md"
repository = "https://github.com/mainmatter/og-loc"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.93"
async-observable = "0.4.2"
axum = { version = "0.7.7", default-features = false, features = ["http1", "macros", "tokio"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
dashmap = "6.1.0"
db-dump = "0.7.6"
dotenvy = { version = "0.15.7", default-features = false }
futures-lite = { version = "2.5.0", default-features = false }
minijinja = { version = "2.5.0", default-features = false }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", default-features = false, features = ["fs", "macros", "rt", "rt-multi-thread", "io-util"] }
typst = "0.12.0"
typst-kit = "0.12.0"
typst-render = "0.12.0"

[dev-dependencies]
insta = "1.41.1"
test-case = "3.3.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
db-dump.opt-level = 3
