[package]
name = "og-loc"
version = "0.1.0"
edition = "2021"
authors =  ["Henk Oordt <hd@oordt.dev>"]
description = "Open Graph image generator for crates.io"
readme = "README.md"
repository = "https://github.com/mainmatter/og-loc"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.95"
async-observable = "0.4.2"
axum = { version = "0.8.2", default-features = false, features = ["http1", "macros", "tokio"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
db-dump = "0.7.9"
dotenvy = { version = "0.15.7", default-features = false }
futures-lite = { version = "2.6.0", default-features = false }
minijinja = { version = "2.6.0", default-features = false }
moka = { version = "0.12.10", default-features = false, features = ["sync"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", default-features = false, features = ["fs", "macros", "rt", "rt-multi-thread", "io-util"] }
typst = "0.12.0"
typst-kit = "0.12.0"
typst-render = "0.12.0"

[dev-dependencies]
insta = "1.42.0"
test-case = "3.3.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
db-dump.opt-level = 3
